--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
     sdk: flutter
   connectivity: ^0.4.4
   permission_handler: ^3.2.0
+  path_provider: ^1.3.0
+  h264: ^0.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
